# Image-to-3D

./: .gitignore  Dockerfile  Dockerfile.nvidia  README.md  compose-linux.yml  compose-nvidia.yml  compose-prod-linux.yml  compose-prod-windows.yml  compose-windows.yml  docker-compose.prod.yml  docker-compose.yml
src/: CMakeLists.txt  ModelLoader.qml  Theme.cpp  ai_reconstructionmanager.cpp  ai_reconstructionmanager.h  ai_worker.cpp  ai_worker.h  ai_worker_main.cpp  config.h.in  main.cpp  mainframe.cpp  mainframe.h  mainframe.ui  mainframe.ui.autosave  mainwindow.cpp  mainwindow.h  mainwindow.ui  modelviewer.cpp  modelviewer.h  mvs_runner.cpp  mvs_runner.h  reconstructionmanager.cpp  reconstructionmanager.h  viewer.qml
